# CZXCXXX

./: .replit  ADSPOWER_CONFIGURACAO.txt  COMO_USAR.txt  logger.py  main.py  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted--Passo-a-Passo-Completo-para-Criar-uma-Campanha-de-Pesquisa-no-Google-Ads-1-Acessar-o-Google-Ads--1758912108284_1758912108811.txt  Pasted-vou-te-mandar-alguns-links-de-instru-es-do-google-ads-para-vc-ver-se-nao-ta-faltando-nada-no-nosso--1758912474888_1758912474888.txt
src/: adspower_manager.py  config.py  google_ads_automation.py  logger.py  main.py  retry_system.py
